--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -566,7 +566,7 @@
    "metadata": {},
    "source": [
     "### Monte-Carlo simulations\n",
-    "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criterion of a known distribution. In HARP, one specifies the range of years of historical data that will be used to characterize the probability distribution of the normal distribution. Once selected, one can run as many realization as desired. The more is generally the better, as it will improve the mean while increasing the possibility of observing rare events. A value of 1000 is generally sufficient. Open the script to see what range of years were used to derive the statistical distribution."
+    "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criterion of a known distribution. In HARP Labs, one specifies the range of years of historical data that will be used to characterize the probability distribution of the normal distribution. Once selected, one can run as many realization as desired. The more is generally the better, as it will improve the mean while increasing the possibility of observing rare events. A value of 1,000 is generally sufficient. Open the script to see what range of years were used to derive the statistical distribution."
    ]
   },
   {
