--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -14,7 +14,7 @@
    "id": "3fbb38b5",
    "metadata": {},
    "source": [
-    "This package is a laboratory for exploring the sensitivity of retirement financial decisions. Strictly speaking, it is not a planning tool, but more an environment to explore *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an asset earnings plan. This is where this tool fits it. Given your savings and spending desires, it can generate different realizations of your strategy under different market assumptions.\n",
+    "This package is a retirement modeling framework for exploring the sensitivity of retirement financial decisions. Strictly speaking, it is not a planning tool, but more an environment for exploring *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an asset earnings plan. This is where this tool fits it. Given your savings and spending desires, it can generate different future realizations of your strategy under different market assumptions.\n",
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
@@ -29,9 +29,9 @@
     "## Introduction\n",
     "This file is provided as a template to introduce you to HARP Lab. This notebook describes the case of Jack and Jill, a ficticious couple used for demonstration.\n",
     "\n",
-    "For simulating your own realizations, it is best to make a copy of this file and all those beginning by *jack+jill*. Copy them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with HARP Lab.\n",
+    "For simulating your own realizations, it is best to make a copy of this file and all other files beginning with *jack+jill*. Copy them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with HARP Lab.\n",
     "\n",
-    "I assume that you have some familiarity with using a jupyter notebook, and some basic programming skills in Python."
+    "I assume that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python."
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "### Just some Python module bookkeeping\n",
-    "These commands load the required module and set the program to display informational messages as it runs. It also makes sure that all graphs are displayed in the jupyter interface."
+    "The following commands load the required module and set the program to display informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface."
    ]
   },
   {
@@ -65,7 +65,7 @@
    "id": "d2d87b7e",
    "metadata": {},
    "source": [
-    "## Initialize your realization\n",
+    "## Initializing the realization\n",
     "In order to be able to generate a realization of the future, Jack and Jill must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
     "For selecting your own numbers, there are plenty of longivity predictors on the web. Pick your favorite:\n",
@@ -76,7 +76,7 @@
     "\n",
     "or just Google life expectancy calculator.\n",
     "\n",
-    "There are two values needed for couples. Single individuals just enter one value in each list [ ]. For couples, keep the same order in the pair of values when entering the data. Here Jack was born in 1961 and Jill in 1964. Jack hopes to live to 89 years old, while Jill thinks she might reach age 92."
+    "There are two values needed for couples. Single individuals just enter one value in each list between square brackets `[ ]`. For couples, always keep the same order in the pair of values when entering the data. Here Jack was born in 1961 and Jill in 1964. Jack hopes to live to 89 years old, while Jill thinks she might reach age 92."
    ]
   },
   {
@@ -100,9 +100,9 @@
     "- Tax-deferred savings accounts, including all IRAs, 401k, 403b, etc.\n",
     "- Tax-free savings accounts, including Roth IRAs and Roth 401k\n",
     "\n",
-    "For married couples, each spouse will have to enter values for each type of savings account, following the same order as before. For single individuals, only one value is needed between each pair of brackets [ ].\n",
+    "For married couples, each spouse will have to enter values for each type of savings account, following the same order as before. For single individuals, only one value is needed between each pair of brackets `[ ]`.\n",
     "\n",
-    "Most investment accounts have named beneficiaries. The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25.\n",
+    "Most investment accounts have named beneficiaries. The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25. While this number is irrelevant for single individuals, it still needs to be entered: just use `[1]`.\n",
     "\n",
     "Jack and Jill leave everything to each other as account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$500k in his 401k, and \\\\$80 in his Roth 401k and Roth IRAs. Jill has \\\\$40k in her savings bank account, \\\\$150k in a 403b, and \\\\$25k in Roth IRAs in which she contributed over the years."
    ]
@@ -130,17 +130,17 @@
     "- Equity funds tracking the S&P500 index;\n",
     "- Bond assets tracking the Corporate bonds (Baa) index;\n",
     "- Fixed-income securities represented by the performance of 10-year Treasury bonds;\n",
-    "- Inflation-indexed securities tracking urban Consumer Price Index (common assets).\n",
+    "- Inflation-indexed securities tracking the urban Consumer Price Index (common assets).\n",
     "\n",
     "The total of percentages in each class of assets for each savings account must add to 100%.\n",
     "\n",
-    "You are asked to provide an assets ratio distribution for today, and one for the end of your life.\n",
+    "You are asked to provide asset ratios for today, and ones for the time at the end of your life.\n",
     "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
     "if you want to shift assets allocation as you age.\n",
     "\n",
     "In the example below, Jack's and Jill's allocations start in full stock equities in the tax-free account,\n",
     "gradually transitioning to a traditional 60/40 portfolio towards the end of their life. Their tax-deferred\n",
-    "account stays as a traditional 60/40 for the duration of the realization. Note that asset ratios are entered in percentages."
+    "account stays as a traditional 60/40 for the duration of the realization. Note that asset ratios are entered as percentages."
    ]
   },
   {
@@ -167,17 +167,17 @@
    "metadata": {},
    "source": [
     "## Specify rates of return and inflation rate\n",
-    "Rates of return can be specified for each class of assets, and inflation.\n",
-    "Setting rates is done with the `setRates()` function from which one can select different\n",
-    "sources for the rates.\n",
+    "Rates of return for each class of assets can be specified, including the rate of inflation.\n",
+    "Setting rates is done with the `setRates()` method from which one can select different\n",
+    "sources for determining the rates.\n",
     "Valid entries are 'historical', 'stochastic', or a list of fixed average values.\n",
     "\n",
-    "For the *historical* and *stochastic* choices, data from 1928 to last year are available for experimenting.\n",
+    "For the *historical* and *stochastic* choices, data from 1928 to the last year are available for experimenting.\n",
     "Ranges chosen smaller than the life horizon of the longest-lived individual will have rate values repeated in cycle. For example,\n",
-    "choosing historical data from 1994 to 1996 will repeat these three values over the time span of the realization.\n",
+    "choosing historical data from 1994 to (up and including) 1996 will repeat these three values over the time span of the realization.\n",
     "This would be called as follows\n",
     "\n",
-    "    plan.setRates('hitorical', 1994, 1996)\n",
+    "    plan.setRates('historical', 1994, 1996)\n",
     "\n",
     "If the last time bound is not provided as the third argument, then the latest data year (i.e., last year) will be assumed by default.\n",
     "If one chooses a historical range starting from 1970, HARP will use the rates of 1970 for this year and 1971 for next, etc. This would be simulated as follows:\n",
@@ -188,24 +188,24 @@
     "\n",
     "    plan.setRates('historical', 1966)\n",
     "\n",
-    "In this case, the  current year will have the same rates as those that happened in 1966, and next year will have those from 1967, and so on. This choice is given for instructional purposes only. No one should make a plan based on the worst-case scenario. Nevertheless, it can be informative to test your own case. In practice, however, a success rate larger then 90% over a reasonable set of years and market assumptions should be acceptable. But this is all a personal choice.\n",
+    "In this case, the  current year will have the same rates as those that happened in 1966, and next year will have those from 1967, and so on. This choice is given for instructional purposes only. No one should make a plan based on the worst-case historical scenario. Nevertheless, it can be informative to test your own case. In practice, however, a success rate larger then 90% over a reasonable set of years and market assumptions would be acceptable by a large portion of rational thinkers. But this is all a personal choice.\n",
     "\n",
-    "Alternatively, one can choose a *stochastic* approach in which rates are determined from the multivariate distribution for the 4 rates in the selected year range.  The computed statistical distribution of the selected range of data is used to generate random rate values. For example,\n",
+    "Alternatively, one can choose a *stochastic* approach in which case the rates are determined from the multivariate distribution for the 4 rates in the selected year range.  The computed statistical distribution of the selected range of data is used to generate random rate values. For example,\n",
     "\n",
     "    plan.setRates('stochastic', 1945)\n",
     "    \n",
-    "will analyze the data from 1945 to last-year data and compute means and covariance to generate data that is statistically equivalent to the ones observed in the data range. The rates randomly generated for the timespan can be plotted and examined as we will see below. Similarly,\n",
+    "will analyze the data from 1945 to last-year data and compute means and covariance to generate data that is statistically representative of the ones observed in the data range. The rates randomly generated for the timespan can be plotted and examined as we will see below. Similarly,\n",
     "\n",
     "    plan.setRates('stochastic', 1940, 1970)\n",
     "\n",
     "would generate random rates consistent to those observed during the 1940 - 1970 time period.\n",
     "    \n",
-    "Finally one can also use fixed annual rates by providing a list of 4 entries as follows:\n",
+    "Finally one can also use fixed annual rates averaged over the whole time interval by providing a list of 4 entries as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates(myrates)\n",
     "    \n",
-    "This example would use fixed average annual rates of 9.6%, 4% and 3% average annual returns on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average annual inflation rate of 3.8%. Remember that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
+    "This example would use fixed average annual rates of 9.6%, 4% and 3% average annual returns on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Remember that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
     "\n",
     "Also note that the S&P500 rates provided always include dividends, which are assumed to be reinvested.\n",
     "\n",
@@ -228,7 +228,7 @@
    "metadata": {},
    "source": [
     "## How much net income is desirable at retirement?\n",
-    "For determining the desirable net income in retirement, certified planners will strongly suggest that you've must have done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions.\n",
+    "For determining the desirable net income in retirement, certified planners will strongly suggest that you've must have already done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
     "\n",
     "The desired income defined here is the minimum net income (i.e., after paying taxes) that one would like to have starting at her/his \"retirement age\" (we will provide a loose definition the term *retirement age* below). This desired income must be adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be adjusted for inflation.\n",
     "\n",
@@ -292,15 +292,15 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the first year after both spouses have passed. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "Here, 20XX is the last row that is the first year after both spouses have passed following the provided life expectancies. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
     "\n",
     "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
     "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income as this can sometimes be easier.\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in Excel, one can use the native calculator to enter a percentage of the anticipated income for contributions as this can sometimes be easier.\n",
     "\n",
     "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore lower tax rates), typically in the bridge years between having a full-time regular salary and collecting social security. Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
     "\n",
-    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting your plan. So for Jack and Jill, this worksheet file needs two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before. In fact, HARP Lab uses the names of these tabs to determine the individuals' names.\n",
+    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting your plan. So for Jack and Jill, this worksheet file needs to have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of the data provided before. In fact, HARP Lab uses the names of these tabs to determine the individuals' names.\n",
     "\n",
     "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license.\n",
     "\n",
@@ -326,7 +326,9 @@
     "It can be desirable for couples to determine how to make distributions from each spousal account.\n",
     "By specifying an *auto* spousal split, the withdrawals from the retirement savings accounts will be made proportial to their respective balances. It can also be specified as a fixed fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse.\n",
     "\n",
-    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate the spousal accounts. Jack and Jill decide to rely o HARP to make the right decision on their behalf."
+    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate spousal accounts.\n",
+    "\n",
+    "Jack and Jill decide to rely o HARP Lab to make the right decision on their behalf."
    ]
   },
   {
