--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -23,6 +23,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79fc57cf-fd5a-4972-8112-078282cde9fc",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color: blue\"> README: Don't make changes directly to this file. Keep it as a working example. Therefore, it is strongly recommended that you make your own copy of this (and other files) where you will be able to enter and explore your own assumptions. Please read the *Introduction* below how to best proceed. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "355ed178",
    "metadata": {},
    "source": [
@@ -100,7 +108,7 @@
     "- Tax-deferred savings accounts, including all IRAs, 401k, 403b, etc.\n",
     "- Tax-free savings accounts, including Roth IRAs and Roth 401k\n",
     "\n",
-    "For married couples, each spouse will have to enter values for each type of savings account, following the same order as before. For single individuals, only one value is needed between each pair of brackets `[ ]`.\n",
+    "For married couples, each spouse will have to enter values for each type of savings account, following the same order as before. For single individuals, only one value is needed between square brackets `[ ]`.\n",
     "\n",
     "Most investment accounts have named beneficiaries. The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25. While this number is irrelevant for single individuals, it still needs to be entered: just use `[1]`.\n",
     "\n",
@@ -117,7 +125,7 @@
     "plan.setAssetBalances(taxable=[90000, 40000], \n",
     "                      taxDeferred=[500000, 150000],\n",
     "                      taxFree=[80000, 25000],\n",
-    "                      beneficiary=[1., 1.])"
+    "                      beneficiary=[1, 1])"
    ]
   },
   {
@@ -179,7 +187,7 @@
     "\n",
     "    plan.setRates('historical', 1994, 1996)\n",
     "\n",
-    "If the last time bound is not provided as the third argument, then the latest data year (i.e., last year) will be assumed by default.\n",
+    "If the upper bound is not provided as the third argument, then the latest data year (i.e., last year) will be assumed by default.\n",
     "If one chooses a historical range starting from 1970, HARP will use the rates of 1970 for this year and 1971 for next, etc. This would be simulated as follows:\n",
     "\n",
     "    plan.setRates('historical', 1970)\n",
@@ -292,7 +300,7 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the last row that is the first year after both spouses have passed following the provided life expectancies. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
     "\n",
     "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
     "\n",
@@ -328,7 +336,7 @@
     "\n",
     "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate spousal accounts.\n",
     "\n",
-    "Jack and Jill decide to rely o HARP Lab to make the right decision on their behalf."
+    "Jack and Jill decide to rely on HARP Lab to make the right decision on their behalf."
    ]
   },
   {
@@ -349,7 +357,7 @@
     "## Run calculations\n",
     "We're ready!\n",
     "\n",
-    "This final call runs all the required calculations for the time horizon set by the life expectancies of Jack and Jill."
+    "This final call runs all the required calculations for the time horizon set by the life expectancies given by Jack and Jill."
    ]
   },
   {
@@ -551,7 +559,7 @@
    "metadata": {},
    "source": [
     "### Historical comparisons\n",
-    "When run with the *historical argument*, the script runs Jack's and Jill's scenario through historical data starting from 1930 to 1986. Note how their planned scenario is successful in all years except 1966 and 1969 if they are willing to spend \\\\$79,500 as inflation-adjusted net income. "
+    "When run with the *historical* argument, the script runs Jack's and Jill's scenario through historical data starting from 1960 to 1986. Note how their planned scenario is successful in all years except 1966 and 1969 if they are willing to spend \\\\$79,500 as inflation-adjusted net income. "
    ]
   },
   {
@@ -570,18 +578,42 @@
    "metadata": {},
    "source": [
     "### Monte-Carlo simulations\n",
-    "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criterion of a known distribution. In HARP Lab, one specifies the range of years of historical data that will be used to characterize the probability distribution of the normal distribution. Once selected, one can run as many realization as desired. The more is generally the better, as it will improve the mean while increasing the possibility of observing rare events. A value of 1,000 is generally sufficient. Open the script to see what range of years were used to derive the statistical distribution."
+    "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criterion of a known distribution. In HARP Lab, one specifies the range of years of historical data that will be used to characterize the probability distribution of the normal distribution. Once selected, one can run as many realization as desired. The more is generally the better, as it will improve the mean while increasing the possibility of observing rare events. A value of 1,000 is generally sufficient. Open the script to see what range of years were used to derive the statistical distribution. For the sake of demonstration in this notebook, we will use a smaller value of 200."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e0e00d4",
+   "id": "83e45f69-b9c7-4577-947a-2348b5a8d330",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run jack+jill.py Monte-Carlo 1000"
+    "%run jack+jill.py Monte-Carlo 200"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79c42562-575a-4c7b-8b75-ebc61f053562",
+   "metadata": {},
+   "source": [
+    "These two scipts are provided as examples to inspire you to write your own scripts and explore the robustness and sensitivity of your retirement strategy. Go and explore!\n",
+    "\n",
+    "\n",
+    "Enjoy!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af9e7fd6-dd94-4753-a663-c39a1759a273",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
