Still struggling with window placement on Windows.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -526,7 +526,7 @@
    "id": "96d1dd05",
    "metadata": {},
    "source": [
-    "## Do we save this realization?\n",
+    "## Can we save this realization?\n",
     "This realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assuptions. This info can be saved in an excel workbook with one spreadsheet (tab) for Jack and one for Jill."
    ]
   },
@@ -548,7 +548,7 @@
     "## Next level\n",
     "The flexibility of HARP Lab allows for scripting Monte-Carlo simulations by embedding the calls described above in an iterative script. In those simulations, multiple instances are executed to further explore the robustness of one's decisions under different market realizations.\n",
     "\n",
-    "The script *jack+jill.py* is intended for that purpose and is provided as an example. It showcases two possibilities. In the first one, historical data is used to explore how the plan survives the test of historical rates from 1928 to the most recent past. The other capability shows a Monte-Carlo approach to generate ficticious rates derived from the statistical distribution of those observed in a selected time period.\n",
+    "The script *jack+jill.py* is intended for that purpose and is provided as an example. It showcases two possibilities. In the first one, historical data is used to explore how the plan survives the test of historical rates observed from 1960 to the most recent past. The other capability shows a Monte-Carlo approach in which ficticious rates are derived from the statistical distribution of those observed in a selected time period.\n",
     "\n",
     "This script is a template for designing your own. It can be run through the command line, but they can also be run from jupyter using the %run function. Let' delve into these capabilities.\n"
    ]
@@ -559,7 +559,7 @@
    "metadata": {},
    "source": [
     "### Historical comparisons\n",
-    "When run with the *historical* argument, the script runs Jack's and Jill's scenario through historical data starting from 1960 to 1986. Note how their planned scenario is successful in all years except 1966 and 1969 if they are willing to spend \\\\$79,500 as inflation-adjusted net income. "
+    "When run with the *historical* argument, the script runs Jack's and Jill's scenario through historical data. It simulates a situation in which this year's rate would be those which happened 1960 and beyond. Next simulation starts in 1961 and so on. Notice how their planned scenario is successful for all first years except for 1966 and 1969 if they are willing to spend \\\\$79,500 as inflation-adjusted net income."
    ]
   },
   {
