Added template for notebook

--- a/template.ipynb
+++ b/template.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "### <span style=\"color: blue\"> README FIRST </span>\n",
     "<span style=\"color:black;background:yellow;font-weight:bold\">\n",
-    "Don't make changes directly to this file. Keep it as a working example. Therefore, it is strongly recommended that you build your own case using the template files provided where you will be able to enter your own numbers and explore your own assumptions.\n",
+    "    Don't make changes directly to this file. Keep it as a working example. Therefore, it is strongly recommended that you build your own case using the template files provided where you will be able to enter your own numbers and explore your own assumptions. \n",
     "</span>"
    ]
   },
@@ -47,10 +47,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2939c06-b407-48fb-91d7-560cd96d5206",
+   "id": "a7c9b1a6-f17d-4f66-b738-edb44de5bc6b",
    "metadata": {},
    "source": [
-    "This notebook named *jack+jill* describes the case of Jack and Jill, a ficticious couple used for demonstration."
+    "#### <span style='background:yellow'> This is your own scenario."
    ]
   },
   {
@@ -107,7 +107,7 @@
    "id": "6b58d346-55a3-40f0-91fe-014a150f5b76",
    "metadata": {},
    "source": [
-    "Here Jack was born in 1961 and Jill in 1964. Jack hopes to live to 89 years old, while Jill thinks she might reach age 92."
+    "####  <span style='background:yellow'> Enter your own year of birth and life expectancies."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan = rp.Plan(YOB=[1961, 1964], expectancy=[89, 92])"
+    "plan = rp.Plan(YOB=[XXXX, XXXX], expectancy=[XX, XX])"
    ]
   },
   {
@@ -146,9 +146,7 @@
    "id": "eecc3b25-ae80-4e6a-be38-1f3c66a46899",
    "metadata": {},
    "source": [
-    "In the example below, Jack's and Jill's allocations start in full stock equities in the tax-free account,\n",
-    "gradually transitioning to a traditional 60/40 portfolio towards the end of their life. Their tax-deferred\n",
-    "account stays as a traditional 60/40 for the duration of the realization. Note that asset ratios are entered as percentages."
+    "#### Enter your assets allocation ratios for each type of savings account."
    ]
   },
   {
@@ -228,7 +226,7 @@
    "id": "f8211310-cb2a-47a3-bc21-93e049e38eb9",
    "metadata": {},
    "source": [
-    "Jill is interested to know if her situation would survive a retirement started in 1969. The following call would make exactly that."
+    "####  <span style='background:yellow'> Pick a year you are curious about."
    ]
   },
   {
@@ -262,7 +260,7 @@
    "id": "e700b3b2-1a9f-4804-b92e-9654f6e7fa51",
    "metadata": {},
    "source": [
-    "Jack and Jill leave everything to each other as account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$500k in his 401k, and $80 in his Roth 401k and Roth IRAs. Jill has \\\\$40k in her savings bank account, \\\\$150k in a 403b, and \\\\$25k in Roth IRAs in which she contributed over the years."
+    "#### Enter your savings account balances."
    ]
   },
   {
@@ -298,7 +296,7 @@
    "id": "ff0cef47-ff75-49e4-88bd-5ce914903fbc",
    "metadata": {},
    "source": [
-    "Jack and Jill believe that their spending profile will follow a *smile* curve rather than a *flat* line. They also believe that they can be comfortable with \\\\$7k per month, therefore \\\\$84k per year.   Can they afford it?"
+    "####  <span style='background:yellow'>Enter your desired annual net income."
    ]
   },
   {
@@ -331,7 +329,7 @@
    "id": "43bd9a2a-e2bf-434f-88ac-b0a70dcdd1fd",
    "metadata": {},
    "source": [
-    "Here, Jill has an unindexed pension of \\\\$10k per year. Both Jack and Jill believe they have good genes and decided to take their social security benefits at age 70. The amounts provided are estimation of the amounts they would receive at age 70. "
+    "####  <span style='background:yellow'>Enter your values for pension and social security."
    ]
   },
   {
@@ -382,7 +380,7 @@
    "id": "029acbc5-419a-41b1-89d9-e91e46f04b75",
    "metadata": {},
    "source": [
-    "Jack and Jill has provided their specific information in the file *jack+jill.xlsx*. This worksheet file needs to have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of the data provided before. Open this file in Excel and familiarize yourself with its contents."
+    "#### Copy the template.xlsx file provided and edit it with your plan. Enter the name of your own file."
    ]
   },
   {
@@ -392,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.readContributions('jack+jill.xlsx')"
+    "plan.readContributions('myfile.xlsx')"
    ]
   },
   {
@@ -412,7 +410,7 @@
    "id": "e9e8b32d-d13b-43b0-8c17-cfe3f58b66be",
    "metadata": {},
    "source": [
-    "Jack and Jill decide to rely on ARP Lab to make a proportional withdrawal decision on their behalf."
+    "####  <span style='background:yellow'>Pick how to determine spousal split in withdrawals."
    ]
   },
   {
@@ -439,7 +437,7 @@
    "id": "ae05b3e9-3d36-4254-bd70-6d3db25f5a54",
    "metadata": {},
    "source": [
-    "This final call runs all the required calculations for the time horizon set by the life expectancies given by Jack and Jill."
+    "####  <span style='background:yellow'>Run your own case."
    ]
   },
   {
