--- a/template.ipynb
+++ b/template.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
-    "Diclaimer: *You make your own decisions and I am not a financial planner. Use at your own risks.*"
+    "Disclaimers: *I am not a financial planner. You make your own decisions. This program comes with no garantee. Use at your own risk.*"
    ]
   },
   {
