--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -430,8 +430,8 @@
    "id": "c1c97249",
    "metadata": {},
    "source": [
-    "## Run calculations\n",
-    "We're ready to run the calculations!\n"
+    "## Generating the outcome of a scenario\n",
+    "We're now ready to run a single instance of a scenario. "
    ]
   },
   {
@@ -439,7 +439,7 @@
    "id": "ae05b3e9-3d36-4254-bd70-6d3db25f5a54",
    "metadata": {},
    "source": [
-    "This final call runs all the required calculations for the time horizon set by the life expectancies given by Jack and Jill."
+    "Recall that we set the rates above to mimic those from and after 1969. For this purpose, we only need to run a single realization looking at what would happen if Jack and Jill had retired in 1969. So let's run this plan: This following call runs all the required calculations for the time horizon over Jack and Jill's life expectancies."
    ]
   },
   {
@@ -628,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.saveRealizationXL('Jack and Jill')"
+    "# plan.saveRealizationXL('Jack and Jill - 1966')"
    ]
   },
   {
@@ -645,7 +645,7 @@
    "id": "dfe6d2b4-9304-432a-b32c-5053bfdcdea3",
    "metadata": {},
    "source": [
-    "In these simulations, multiple scenarios will be generated and need to be compared. For ranking outcomes, it is instructive to compare the final value of the estate, if any. Given that part of the assets portfolio is taxable, one has to provide an estimate of the income tax rate to be applied to the taxable portion of the final assets. This is done using the `setEstateTaxRate()` method, by which each last year of a scenario will use the same estate tax rate for comparison. The default value is %0. Note that this rate is the marginal tax rate that will be paid by the heirs."
+    "In these simulations, multiple scenarios will be generated and need to be compared. For ranking outcomes, it is instructive to compare the final value of the estate, if any. Given that part of the assets portfolio is taxable, one has to provide an estimate of the income tax rate to be applied to the taxable portion of the final assets. This is done using the `setEstateTaxRate()` method, by which each last year of a scenario will use the same estate tax rate for comparison. The default value is %25. Note that this rate is the marginal tax rate that will be paid by the heirs."
    ]
   },
   {
