bug fixes and enhancements

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "## What are current and future assets allocations?\n",
     "Each savings account can invest in 4 major classes of assets:\n",
-    "- Equity funds tracking the S&P500 index;\n",
+    "- Equity funds tracking the S&P 500 index;\n",
     "- Bond assets tracking the Corporate bonds (Baa) index;\n",
     "- Fixed-income securities represented by the performance of 10-year Treasury bonds;\n",
     "- Inflation-indexed securities tracking the urban Consumer Price Index (common assets).\n",
@@ -239,6 +239,26 @@
    "outputs": [],
    "source": [
     "plan.setRates('historical', 1969)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da5637d2-e6a6-4fd4-ae8d-f5f85a49f862",
+   "metadata": {},
+   "source": [
+    "Since ARP Lab has all the historical rates available, one can also display their histograms using the following call. Given the standard deviation of each histogram, the risk/benefit between stocks and bonds becomes clear."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73defc19-8df4-48cc-b27e-4320a49fa07f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rp.plotRateDistributions(1928, 2022);"
    ]
   },
   {
@@ -610,7 +630,7 @@
    "metadata": {},
    "source": [
     "## Can we save this realization?\n",
-    "This realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assuptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse."
+    "This realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assumptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse. Worksheet will also contain annual rates, income, income taxes, and account balances. Second `True/False` argument controls if existing files get overwritten."
    ]
   },
   {
@@ -628,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.saveRealizationXL('Jack and Jill - 1966')"
+    "plan.saveRealizationXL('Jack and Jill - 1966', True)"
    ]
   },
   {
