--- a/template.ipynb
+++ b/template.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "## What are current and future assets allocations?\n",
     "Each savings account can invest in 4 major classes of assets:\n",
-    "- Equity funds tracking the S&P500 index;\n",
+    "- Equity funds tracking the S&P 500 index;\n",
     "- Bond assets tracking the Corporate bonds (Baa) index;\n",
     "- Fixed-income securities represented by the performance of 10-year Treasury bonds;\n",
     "- Inflation-indexed securities tracking the urban Consumer Price Index (common assets).\n",
@@ -608,7 +608,7 @@
    "metadata": {},
    "source": [
     "## Can we save this realization?\n",
-    "This realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assuptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse."
+    "This realization contains information on the distribution amounts, including the required minimum distribution that had to be performed under the given assumptions. This info can be saved in an excel workbook with one spreadsheet (tab) for each spouse. Worksheet will also contain annual rates, income, income taxes, and account balances. Second `True/False` argument controls if existing files get overwritten."
    ]
   },
   {
@@ -626,7 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.saveRealizationXL('Jack and Jill')"
+    "# plan.saveRealizationXL('Jack and Jill', True)"
    ]
   },
   {
@@ -674,7 +674,7 @@
    "id": "3541bc0e-415d-45c7-8727-a1a4c8269afa",
    "metadata": {},
    "source": [
-    "We will run Jack and Jill's scenario over many years. Notice how their scenario is successful for all sequences except for those starting in 1966 if they are willing to spend \\\\$84,500 or less as inflation-adjusted net income. Also notice the difference in net income and final estate between the sequences starting in 1974 and in 1975. It is surprising how much difference can one year of delay make in this case."
+    "####  <span style='background:yellow'>Run your own case. Pick range of years of interest to you."
    ]
   },
   {
@@ -684,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(84100, 'smile')\n",
+    "plan.setDesiredIncome(XXXX, 'smile')\n",
     "rp.setVerbose(False)\n",
     "plan.runHistorical(1960, 1988, myplots=['rates', 'net income'])"
    ]
@@ -696,6 +696,14 @@
    "source": [
     "### Monte-Carlo simulations\n",
     "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criterion of a known distribution. In ARP Lab, one specifies the range of years of historical annual rates data that will be used to characterize the probability distribution of a normal multivariate distribution. Once selected, one can run as many realization as desired. The more is generally the better, as it will improve the accuracy of the mean value while increasing the possibility of observing rare events. A value of 1,000 is generally sufficient. Open the script to see what range of years were used to derive the statistical distribution. For the sake of demonstration in this notebook, we will use a smaller number of iterations of 200."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1f45d18-6756-46bc-928f-ce65cc4cec64",
+   "metadata": {},
+   "source": [
+    "####  <span style='background:yellow'>Run your own case. Pick range of years of interest to you."
    ]
   },
   {
